[package]
name = "log_reporter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.7.3" }
axum-extra = { version = "0.9.1", features = ["typed-header"] }
chrono = { version = "0.4.24", default-features = false }
hyper = "1.1.0"
crossbeam-utils = "0.8.15"
nom = "7.1.3"
rayon = "1.7.0"
sentry = { version = "0.34.0", features = ["metrics"] }
sentry-anyhow = { version = "0.34.0", features = ["backtrace"] }
sentry-panic = "0.34.0"
sentry-tower = { version = "0.34.0", features = ["http"] }
sentry-tracing = "0.34.0"
tokio = { version = "1.28.0", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
tower = "0.5.0"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = false, features = [
  "ansi",
  "fmt",
  "env-filter",
] }
uuid = "1.3.1"

[dev-dependencies]
sentry = { version = "0.34.0", features = ["test"] }
test-case = "3.1.0"
tower = { version = "0.5.0", features = ["util"] }
