[package]
name = "log_reporter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.8.1" }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
crossbeam-utils = "0.8.15"
hyper = "1.1.0"
nom = "8.0.0"
rayon = "1.7.0"
reqwest = { version = "0.12.12", features = ["json"] }
sentry = { version = "0.45.0", features = ["panic", "tower-http", "tracing"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.28.0", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
toml = "0.9.2"
tower = "0.5.0"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = false, features = [
  "ansi",
  "fmt",
  "env-filter",
] }
uuid = "1.3.1"

[dev-dependencies]
mockito = "1.6.1"
sentry = { version = "0.45.0", features = ["test"] }
test-case = "3.1.0"
tower = { version = "0.5.0", features = ["util"] }
